# covenant-md

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-spec  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  TRADEMARK.md  biome.json  jest.config.mjs  llms.txt  package-lock.json  package.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  spec_question.md
.github/workflows/: ci.yml
benchmarks/: METHODOLOGY.md  README.md  llm-adapter.mjs  package-lock.json  package.json  run.mjs  scoring.mjs
benchmarks/published/: INDEX.md
covenant-framework/: README.md  package-lock.json  package.json
covenant-framework/src/: cli.js  generate.js  lint.js  test.js
covenant-framework/tests/: diff.test.js  generate.test.js  lint.test.js  skill-runner.test.js
docs/: Agent_Skills_Key_Takeaways.docx  COVENANT.md  IMPLEMENTER-GUIDE.md  Software_Fundamentals_in_AI_Age.docx
docs/adr/: 0001-repo-structure-and-launch-consolidation.md
docs/assets/: render_binding.py
docs/editorial/: COVENANT-pass-1-structural.md  COVENANT-pass-2-developmental.md  COVENANT-pass-3-line.md
examples/docx-generation/: COVENANT.md
examples/markdown-to-html/: COVENANT.md  SKILL.md
examples/pdf-generation/: COVENANT.md
handover-docs/: handover.md
scripts/: bench-sweep.sh  verify-go.sh
sdks/python/: README.md  pyproject.toml
sdks/python/src/covenant_md/: __init__.py  parser.py  schema.json  types.py  validator.py
sdks/python/tests/: conftest.py  test_conformance.py  test_parser.py  test_validator.py
spec/: README.md
src/: COVENANT.md  cli.js  diff.js  graph.js  skill-runner.js  validator.js.backup
src/templates/: COVENANT.md
test-skill/: COVENANT.md  SKILL.md
tests/: diff.test.js  graph.test.js  lint.test.js  test-runner.test.js  validator.test.js
(+62 files in other folders)
